--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 body {
   margin: 0;
   padding: 0;
-  border-spacing: 0;
+  box-sizing: border-box;
   font-family:  neoFont;
   font-size: 17px;
 }
