push react-redux

--- a/src/Components/UI/Button/Button.module.scss
+++ b/src/Components/UI/Button/Button.module.scss
@@ -12,6 +12,10 @@
         margin-left: 0;
         padding-left: 0;
     }
+    &:disabled{
+        color: #cccccc;
+        cursor: not-allowed;
+    }
     
 }
  
