--- a/src/Components/Burger/Burger.module.scss
+++ b/src/Components/Burger/Burger.module.scss
@@ -1,5 +1,5 @@
 .Burger{
-    width: 100%;
+    width: 80%;
     height: 258px;
     margin: auto;
     overflow: auto ;
@@ -7,7 +7,7 @@
     font-weight: bold;
     font-size: 1.2rem;
 }
-@media (min-width: 500px) and (min-height:400px) {
+@media (min-width: 500px)  {
     .Burger {
         width: 350px;
         height: 300px;
